--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.2",
         "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -13,6 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "livewire/livewire": "3.0",
+        "nesbot/carbon": "^2.72",
+        "phpoffice/phpspreadsheet": "^2.1",
         "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
