--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,12 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "livewire/livewire": "3.0",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.72",
-        "phpoffice/phpspreadsheet": "^2.1",
-        "spatie/laravel-permission": "^6.7"
+        "phpoffice/phpspreadsheet": "^1.18",
+        "spatie/laravel-permission": "^6.7",
+        "symfony/css-selector": "^6.0",
+        "vlucas/phpdotenv": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -31,7 +34,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Maatwebsite\\Excel\\": "path/to/laravel-excel/src/"
         }
     },
     "autoload-dev": {
